# celery_tasklog

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  test_sse.py  test_sse_client.py
.github/workflows/: ci.yml  publish.yml
celery_tasklog/: pyproject.toml
celery_tasklog/src/celery_tasklog/: __init__.py  admin.py  api_views.py  apps.py  middleware.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
celery_tasklog/src/celery_tasklog/migrations/: 0001_initial.py
celery_tasklog/src/celery_tasklog/templates/celery_tasklog/: diagnostic.html  launch_task.html  task_view.html
demo/: README.md  tasks.py  urls.py  views.py
demo/templates/demo/: demo_complete.html  demo_form.html  demo_home.html  demo_task_detail.html
djproject/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
docs/: CeleryTaskLogSpec.md
tests/: README.md  test_sse_broadcast.py  test_sse_client.py  test_tasklog.py
