[tool.poetry]
name = "celery-tasklog-project"
version = "0.1.0"
description = "Demo project for celery_tasklog"
authors = ["Example <example@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
celery = "^5.2"
redis = "^4.0"
django-celery-results = "^2.5"
celery-tasklog = {path = "celery_tasklog", develop = true}

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
