[tool.poetry]
name = "celery_tasklog"
version = "0.1.0"
description = "Celery Task Log - Real-time task monitoring for Django/Celery"
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [{include = "celery_tasklog", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
celery = "^5.2"
django-celery-results = "^2.5"
djangorestframework = "^3.14"
redis = "^4.5"
redis-asyncio = "^2.0"
asgiref = "^3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
